k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments-api
  template:
    metadata:
      labels:
        app: comments-api
    spec:
      containers:
      - name: comments-api
        image: comments-api
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
