k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: comments-api-service
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: comments-api
